test_suite/tests/compile_fail/rename_empty.stderr
error: A rename cannot be empty
 --> tests/compile_fail/rename_empty.rs:5:21
  |
5 |     #[arri(rename = "")]
  |                     ^^
